src/objects/Diagnosis__c.object
<CustomObject>
    <description>Diagnosis information at service assignment level.</description>
    <fields>
        <fullName>Axis_III__c</fullName>
        <label>Axis III</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_II__c</fullName>
        <label>Axis II</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_IV__c</fullName>
        <label>Axis IV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_I__c</fullName>
        <label>Axis I</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Axis_V__c</fullName>
        <label>Axis V</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>date diagnosis is effective</description>
        <label>Date and Time of Diagnosis</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ICD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ICD-10 Code</label>
        <referenceTo>ICD__c</referenceTo>
        <relationshipLabel>Diagnoses</relationshipLabel>
        <relationshipName>Diagnoses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_of_Disability__c</fullName>
        <label>Level of Disability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Referred</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Diagnoses</relationshipLabel>
        <relationshipName>Diagnoses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Diagnoses</relationshipLabel>
        <relationshipName>Diagnoses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <label>Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Diagnosis__c</fullName>
        <label>Secondary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Diagnoses</relationshipLabel>
        <relationshipName>Diagnoses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Void</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Diagnosis</label>
    <nameField>
        <label>Diagnosis</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnoses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>